# nice-assistant

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  entrypoint.sh  model_residency.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vite.config.ts
app/: __init__.py  api_v1.py  application.py  asgi.py  auth.py  capability_contracts.py  capability_service.py  chat.py  compreface_identity_provider.py  context_service.py  conversation_service.py  database.py  identity_api.py  identity_conditioning.py  identity_contracts.py  identity_images.py  identity_service.py  job_queue.py  job_service.py  media.py  media_adapters.py  media_catalog_service.py  media_clients.py  media_planner.py  media_service.py  memory_guard.py  memory_service.py  model_residency.py  models.py  observability.py  ollama_provider.py  operations_service.py  persona_output.py  provider_contracts.py  provider_registry.py  provider_service.py  providers.py  repositories.py  resource_coordination.py  resource_providers.py  (+15 more)
assets/: sd-a1111-openapi-json.txt
docs/: architecture.md  browser-architecture.md  conversation-context.md  debt-register.md  deployment-acceptance.md  design-principles.md  human-experience-realignment-plan.md  media-catalog.md  memory.md  operations.md  persona-visual-identity.md  product-vision.md  roadmap.md  security-model.md  settings-experience.md  task-models.md  testing.md
frontend/: index.html
migrations/: env.py
scripts/: audit_public_repo.py  backup_restore_drill.py  container_smoke_check.ps1  (+4 more)
(+153 files in other folders)
